--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -31,6 +31,12 @@
       <artifactId>scala-library</artifactId>
       <version>2.10.4</version>
     </dependency>
+    <dependency>
+        <groupId>net.virtual-void</groupId>
+        <artifactId>speed_2.10</artifactId>
+        <version>13</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <prerequisites>
