--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,12 +14,12 @@
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>0.9.3</version>
     </dependency>
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-generator-annprocess</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>0.9.3</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
